syntax = "proto3";

import "message.proto";

package friend_service;

// ==== 基础引用 ====

message FriendRef {
  int64 uid = 1;
}

// ==== 关系操作 ====

message AddFriendReq {
  int64 uid  = 1;
  int64 friend_id = 2;
  // 申请人给好友写的备注（默认与名字一致，可用于联系人列表展示）
  optional string remark = 3;
  // 新增：user_id 对 friend_id 的昵称（优先于 nickname）
  optional string nickname_for_user = 4;
  // 新增：friend_id 对 user_id 的昵称（即反向昵称）
  optional string nickname_for_friend = 5;
  // 好友申请来源（默认未知）
  .message.FriendRequestSource source = 6;
}

message AddFriendResp {
  // true 表示新增，false 可能表示已存在
  bool added = 1;
}

message RemoveFriendReq {
  int64 uid  = 1;
  int64 friend_id = 2;
}

message RemoveFriendResp {
  bool removed = 1;
}

message IsFriendReq {
  int64 uid  = 1;
  int64 friend_id = 2;
}

message IsFriendResp {
  bool is_friend = 1;
}

// ==== 仅返回 ID 的老接口（保持兼容）====

// ==== 带别名的“详细”结构与新接口 ====

message FriendEntry {
  int64 friend_id = 1;
  // 好友昵称/备注，未设置则为空字符串；也可结合 presence 判断（见下）。
  //
  // 可选的时间戳/扩展字段，按需启用（预留）
  // int64 created_at = 10;
  // int64 updated_at = 11;
  optional string nickname = 2;
  // 好友申请来源（例如手机号、二维码、群邀请等）
  optional string apply_source = 3;
  // 好友头像 URL
  optional string avatar = 4;
  // 好友备注信息；未设置则为空字符串
  optional string remark = 5;
  // 表示该好友是否在黑名单（true=拉黑中）
  bool blacklisted = 6;
}

message GetFriendsDetailedReq {
  int64 uid = 1;
  // 是否需要返回好友申请来源信息
  bool apply_source = 2;
  // 是否需要返回好友昵称/备注
  bool nickname = 3;
  // 是否需要返回好友头像
  bool avatar = 4;
}

message GetFriendsDetailedResp {
  repeated FriendEntry friends = 1;
}

message GetFriendsPageDetailedReq {
  int64 uid = 1;
  uint64 page = 2;
  uint64 page_size = 3;
}

message GetFriendsPageDetailedResp {
  repeated FriendEntry friends = 1;
}

// ==== 单独更新/设置昵称 ====

message UpdateFriendNicknameReq {
  int64 uid = 1;
  int64 friend_id = 2;
  // 将昵称更新为此值；传空字符串可视为清除昵称
  optional string nickname = 3;
}

message UpdateFriendNicknameResp {
  bool updated = 1;
}

message UpdateFriendRemarkReq {
  int64 uid = 1;
  int64 friend_id = 2;
  optional string remark = 3;
}

message UpdateFriendRemarkResp {
  bool updated = 1;
}

message UpdateFriendBlacklistReq {
  int64 uid = 1;
  int64 friend_id = 2;
  bool blocked = 3;
  optional string reason = 4;
}

message UpdateFriendBlacklistResp {
  bool updated = 1;
}

message ClearFriendsReq {
  int64 uid = 1;
}

message ClearFriendsResp {
}

// ==== gRPC 服务定义 ====

service FriendService {
  rpc AddFriend               (AddFriendReq)               returns (AddFriendResp);
  rpc RemoveFriend            (RemoveFriendReq)            returns (RemoveFriendResp);
  rpc IsFriend                (IsFriendReq)                returns (IsFriendResp);

  // 新增：带别名的查询
  rpc GetFriendsDetailed      (GetFriendsDetailedReq)      returns (GetFriendsDetailedResp);
  rpc GetFriendsPageDetailed  (GetFriendsPageDetailedReq)  returns (GetFriendsPageDetailedResp);

  // 新增：更新昵称与清空
  rpc UpdateFriendNickname    (UpdateFriendNicknameReq)    returns (UpdateFriendNicknameResp);
  rpc UpdateFriendRemark      (UpdateFriendRemarkReq)      returns (UpdateFriendRemarkResp);
  rpc UpdateFriendBlacklist   (UpdateFriendBlacklistReq)   returns (UpdateFriendBlacklistResp);
  rpc ClearFriends            (ClearFriendsReq)            returns (ClearFriendsResp);
}
